[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/items/metal.png" type="Texture" id=1]
[ext_resource path="res://scripts/scrap.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 14.605

[sub_resource type="CircleShape2D" id=2]
radius = 18.0

[node name="scrap" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"item",
]]

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 3.77354, 7.54707 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="Sprite2" type="Sprite" parent="Area2D"]
position = Vector2( 8.67913, -2.64147 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="Sprite3" type="Sprite" parent="Area2D"]
position = Vector2( -7.16972, -3.77353 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 2 )
shape_centered = false
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
